# starter-cookie

./: .gitignore  LICENSE.txt  Readme.md  config.yaml  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project }}/: .env  .gitignore  pyproject.toml
{{ cookiecutter.project }}/notebooks/: 0_start.ipynb
{{ cookiecutter.project_slug }}/: .env  .gitignore  .pre-commit-config.yaml  README.md  pre-commit-config.yaml  pyproject.toml
{{ cookiecutter.project_slug }}/notebooks/: 0_start.ipynb
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/utils/: __init__.py
