[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }} <{{ cookiecutter.email }}>"]
readme = "README.md"
packages = [{include = "{{ cookiecutter.project_slug }}", from = "src"}]

[tool.poetry.dependencies]
python =  "~{{ cookiecutter.python_version }}"
numpy = "^1.24.2"
pandas = "^1.5.3"
scikit-learn = "^1.2.2"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
jupyter = "^1.0.0"
black = "^23.1.0"
jupyter-black = "^0.3.1"
mypy = "^1.1.1"
isort = "^5.12.0"
pytest = "^7.2.2"
pytest-mock = "^3.8.2"
{%- if cookiecutter.use_precommit == 'yes': %}
pre-commit = "^3.2.0"
{%- endif %}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
